force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Customer_Premium_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premium_Per_Unit__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Customer Premium per unit is the allowed markup for distributors to raise the selling price of a given product (line item) in order to cover their own costs and make a profit</description>
    <inlineHelpText>Input Premium value as an amount or percentage.</inlineHelpText>
    <label>Customer Premium Per Unit</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>