force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Customer_Premium_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Premium_Type__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Customer Premium type enables the selection of the allowed markup value for distributors as an amount or percentage.</description>
    <inlineHelpText>Select type for Premium value as amount or percentage.</inlineHelpText>
    <label>Customer Premium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
                <default>true</default>
                <label>Amount</label>
            </value>
            <value>
                <fullName>% Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>