force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Discount_Grid_Group__c.field-meta.xml
<CustomField>
    <fullName>Discount_Grid_Group__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Material master attribute used to map a product or group of products to a appropriate discount grid</description>
    <formula>IF(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Product/Service&apos;) , TEXT(Apttus_Config2__ProductId__r.Discount_Grid_Group__c),TEXT(Apttus_Config2__OptionId__r.Discount_Grid_Group__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Grid Group</label>
    <type>Text</type>
</CustomField>