force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Discount_Guidance__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Discount Guidance Record associated to this line item</description>
    <label>Discount Guidance</label>
    <referenceTo>Discount_Guidance__c</referenceTo>
    <relationshipLabel>Discount Guidance</relationshipLabel>
    <relationshipName>DG_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>