force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Discounted_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price_Per_Unit__c</fullName>
    <description>This field specify the discounted price per unit of product.</description>
    <label>Discounted Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>