force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Distributor_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Net_Price__c</fullName>
    <description>This field specify the Distributor Net Price for Line Item.</description>
    <formula>Apttus_Config2__NetPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Net Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>