force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Distributor_Specific_Discount__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specific_Discount__c</fullName>
    <description>DCP-8632 - To give discounts based on the distributor.</description>
    <label>Distributor Specific Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>