force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Distributor_Specific_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specific_Discount_Percentage__c</fullName>
    <description>This field specify Distributor Specific Discount Percentage for Line Item.</description>
    <label>Distributor Specific Discount %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>