force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Distributor_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Specific_Price__c</fullName>
    <description>This field specify Distributor Specific Price.</description>
    <label>Distributor Specific Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>