force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <description>This field specify Domain Name for Line Item.</description>
    <label>Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>