force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/EcomLineItemID__c.field-meta.xml
<CustomField>
    <fullName>EcomLineItemID__c</fullName>
    <label>Ecom Line Item ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>