force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/End_Of_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Service_Date__c</fullName>
    <description>This field states end of service date for a product.</description>
    <formula>Apttus_Config2__ProductId__r.End_Of_Service_Date__c</formula>
    <label>End Of Service Date</label>
    <type>Date</type>
</CustomField>