force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Equipment_Id__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Id__c</fullName>
    <description>This field states Equipment Id of a product.</description>
    <label>Equipment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>