force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/ERP_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Number__c</fullName>
    <description>This field specify ERP Line Number for Line Item.</description>
    <externalId>true</externalId>
    <label>ERP Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>