force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Fixed_Price__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price__c</fullName>
    <description>This field specify fixed price of total line item.</description>
    <label>Fixed Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>