force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Fixed_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Per_Unit__c</fullName>
    <description>This field specify fixed price per unit for a product.</description>
    <label>Fixed Price(Per Unit)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>