force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Freight_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Freight_Discount_Amount__c</fullName>
    <description>This field specify Freight Discount amount for a product.</description>
    <label>Freight Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>