force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Freight_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Discount_Percentage__c</fullName>
    <description>This field specify Freight Discount Percentage for a product.</description>
    <label>Freight Discount Percentage</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>