force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Hide_Contract_Dates__c.field-meta.xml
<CustomField>
    <fullName>Hide_Contract_Dates__c</fullName>
    <description>This checkbox field is used to hide contract dates.</description>
    <defaultValue>false</defaultValue>
    <label>Hide Contract Dates</label>
    <type>Checkbox</type>
</CustomField>