force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Instance_Region__c.field-meta.xml
<CustomField>
    <fullName>Instance_Region__c</fullName>
    <description>This picklist field is used to identify instance region of Line Item.</description>
    <label>Instance Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Determined</fullName>
                <default>true</default>
                <label>To Be Determined</label>
            </value>
            <value>
                <fullName>us-east-1</fullName>
                <label>Northern Virginia</label>
            </value>
            <value>
                <fullName>us-west-2</fullName>
                <label>Oregon</label>
            </value>
            <value>
                <fullName>eu-central-1</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>eu-west-1</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>ap-northeast-1</fullName>
                <label>Japan</label>
            </value>
            <value>
                <fullName>ap-northeast-2</fullName>
                <label>South Korea</label>
            </value>
            <value>
                <fullName>ap-southeast-1</fullName>
                <label>Singapore</label>
            </value>
            <value>
                <fullName>ap-southeast-2</fullName>
                <label>Australia/Sydney</label>
            </value>
            <value>
                <fullName>AMR</fullName>
                <isActive>false</isActive>
                <label>AMR</label>
            </value>
            <value>
                <fullName>APAC</fullName>
                <isActive>false</isActive>
                <label>APAC</label>
            </value>
            <value>
                <fullName>APJ</fullName>
                <isActive>false</isActive>
                <label>APJ</label>
            </value>
            <value>
                <fullName>EMEA</fullName>
                <isActive>false</isActive>
                <label>EMEA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>