force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <description>This checkbox is used identify if Line Item is new or not.</description>
    <defaultValue>true</defaultValue>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>