force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Custom Line Description</description>
    <label>Line Description</label>
    <type>TextArea</type>
</CustomField>