force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Line_Item_Old_Values__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Old_Values__c</fullName>
    <description>This text area field is used to specify line item old values.</description>
    <label>Line Item Old Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>