force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Line_Item_Validate_Old__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Validate_Old__c</fullName>
    <description>This is the backend field used to validate old line items.</description>
    <label>Line Item Validate Old Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>