force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>This field specify the list price of line item.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>