force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Material_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Material_Group_1__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Material Group 1 Code of Product Record.</description>
    <formula>IF( ISPICKVAL( Apttus_Config2__LineType__c , &apos;Product/Service&apos;) ,Apttus_Config2__ProductId__r.Material_Group_1_Code__c, Apttus_Config2__OptionId__r.Material_Group_1_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Group 1</label>
    <type>Text</type>
</CustomField>