force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Median_Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Median_Discount_Guidance__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Median Discount Guidance percentage pulled from Discount Guidance, based on Account and Product</description>
    <inlineHelpText>Median Discount Guidance percentage pulled from Discount Guidance, based on Account and Product</inlineHelpText>
    <label>Median Discount Guidance</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>