force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Min_Discount__c.field-meta.xml
<CustomField>
    <fullName>Min_Discount__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>The Min Discount %  from the associated Sales Approval Matrix (of Approval Hierarchy Type: Record Owner) associated to this line item</description>
    <label>Min Discount %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>