force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Number_Of_Samples__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Samples__c</fullName>
    <description>This field specify the number of samples for line item.</description>
    <formula>Apttus_Config2__Quantity__c*Max_Samples_Allowed_Per_kit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Samples</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>