force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Open_Offer_Max__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Max__c</fullName>
    <description>Discount Ceiling for this product for this customer based on Open Offer and account analysis.</description>
    <inlineHelpText>Discount % allowance as per universal grid. This field does not show grandfather pricing.</inlineHelpText>
    <label>Open Offer Max %</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>