force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Open_Offer_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Open_Offer_Product_Category__c</fullName>
    <businessOwnerGroup>Sales_Schema_Owners</businessOwnerGroup>
    <description>Open Offer Product Category of Product (in case of Product/Service Line Type) or Option (in case of Option Line Type).</description>
    <formula>IF(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Product/Service&apos;) , TEXT(Apttus_Config2__ProductId__r.Open_Offer_Product_Category__c),TEXT(Apttus_Config2__OptionId__r.Open_Offer_Product_Category__c))</formula>
    <label>Open Offer Product Category</label>
    <type>Text</type>
</CustomField>