force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Previous_ERP_Contract_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_ERP_Contract_Line_Number__c</fullName>
    <description>This field stores the previous ERP contract line number for a line item.</description>
    <label>Previous ERP Contract Line Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>