force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Price_Override__c.field-meta.xml
<CustomField>
    <fullName>Price_Override__c</fullName>
    <description>Regional Sales Ops and Global Sales Ops override the list price to send to SAP for certain products.</description>
    <label>Price Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>