force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Price_per_sample__c.field-meta.xml
<CustomField>
    <fullName>Price_per_sample__c</fullName>
    <description>This field specify price per sample for a line item.</description>
    <label>Price per sample</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>