force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Material number of the product.</description>
    <formula>IF( ISPICKVAL( Apttus_Config2__LineType__c , &apos;Product/Service&apos;) ,Apttus_Config2__ProductId__r.ProductCode, Apttus_Config2__OptionId__r.ProductCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>