force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Product_Material_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Material_Class__c</fullName>
    <description>This field stores product material class for a line item.</description>
    <formula>TEXT ( Apttus_Config2__ProductId__r.Material_Class__c )</formula>
    <label>Product Material Class</label>
    <type>Text</type>
</CustomField>