force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>This picklist specify the program type for a line item.</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Program</fullName>
            </value>
            <value>
                <fullName>Reagent Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>