force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>This field specify project id for a line item.</description>
    <label>Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>