force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_Channel_1__c.field-meta.xml
<CustomField>
    <fullName>Promo_Channel_1__c</fullName>
    <description>This field specify Promo Channel 1</description>
    <label>Promo Channel 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>