force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_Channel_4__c.field-meta.xml
<CustomField>
    <fullName>Promo_Channel_4__c</fullName>
    <description>This field specify Promo Channel 4</description>
    <label>Promo Channel 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>