force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_Channel_5__c.field-meta.xml
<CustomField>
    <fullName>Promo_Channel_5__c</fullName>
    <description>This field specify Promo Channel 5</description>
    <label>Promo Channel 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>