force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_Code_4__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_4__c</fullName>
    <description>This field specify Promo Code 4 for a product.</description>
    <label>Promo Code 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>