force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Promo_Name_2__c</fullName>
    <description>This field specify Promo Name 2 for a product.</description>
    <label>Promo Name 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>