force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_T_C_3__c.field-meta.xml
<CustomField>
    <fullName>Promo_T_C_3__c</fullName>
    <description>This field specify Promo term and condition 3 for a product.</description>
    <label>Promo T&amp;C 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>