force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promo_T_C_4__c.field-meta.xml
<CustomField>
    <fullName>Promo_T_C_4__c</fullName>
    <description>This field specify Promo term and condition 4 for a product.</description>
    <label>Promo T&amp;C 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>