force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promotion_1__c.field-meta.xml
<CustomField>
    <fullName>Promotion_1__c</fullName>
    <description>This  lookup field used to specify Incentive for a product.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion 1</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Line Items (Promotion 1)</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>