force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promotion_3__c.field-meta.xml
<CustomField>
    <fullName>Promotion_3__c</fullName>
    <description>This lookup field used to specify Incentive for a product.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion 3</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Line Items (Promotion 3)</relationshipLabel>
    <relationshipName>Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>