force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promotion_Code__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Code__c</fullName>
    <description>This field is used to specify promotion code for a product.</description>
    <label>Promotion Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>