force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Promotion_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Discount__c</fullName>
    <description>This field is used to specify promotion discount for a product.</description>
    <label>Promotion Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>