force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_Date__c</fullName>
    <description>The date field used to specify the quote created date.</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Created Date</label>
    <type>Date</type>
</CustomField>