force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Quote_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sub_Type__c</fullName>
    <description>The formula field is used to store quote sub type.</description>
    <formula>Apttus_Config2__ConfigurationId__r.Apttus_QPConfig__Proposald__r.Quote_Sub_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Sub Type</label>
    <type>Text</type>
</CustomField>