force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Registrant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field states contact used for registration.</description>
    <label>Registrant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Line Items (Registrant Contact)</relationshipLabel>
    <relationshipName>Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>