force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Renewal_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Subscription__c</fullName>
    <description>This checkbox is used to identify product is available for renewal subscription. </description>
    <defaultValue>false</defaultValue>
    <label>Renewal Subscription</label>
    <type>Checkbox</type>
</CustomField>