force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Sales_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discretionary_Discount__c</fullName>
    <description>This field is used to stores sales discretionary discount for a product.</description>
    <label>Sales Discretionary Discount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>