force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Sales_Discretionary_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discretionary_Type__c</fullName>
    <description>This field is used specify the sales discretionary type given.</description>
    <label>Sales Discretionary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>% Discount</fullName>
                <default>true</default>
                <label>% Discount</label>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>