force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/SAP_Cross_Plant_Status__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cross_Plant_Status__c</fullName>
    <description>This formula field is used to get product cross plant material status.</description>
    <formula>Apttus_Config2__ProductId__r.Cross_Plant_Material_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Cross Plant Status</label>
    <type>Text</type>
</CustomField>