force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/SAP_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>SAP_Net_Price__c</fullName>
    <description>This field stores SAP net price.</description>
    <label>SAP Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>