force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial Number - Populated from SAP once the product has been purchased, a order has been received and has been processed.</description>
    <label>Serial Number</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>