force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Server_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Server_Connectivity__c</fullName>
    <description>This field used specify the server connectivity.</description>
    <label>Server Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
                <default>true</default>
                <label>Offline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>