force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Server_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Server_Serial_Number__c</fullName>
    <description>This field specify server serial number.</description>
    <label>Server Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>