force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/SFDC_Block__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Block__c</fullName>
    <description>This field is used to check if there is any SFDC block for the product.</description>
    <formula>Apttus_Config2__ProductId__r.SFDC_Block__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFDC Block</label>
    <type>Text</type>
</CustomField>