force-app/main/default/objects/Apttus_Config2__LineItem__c/fields/Shipping_In_1Q_After_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_1Q_After_Close_Quarter__c</fullName>
    <description>This field populate shipping close quarter.</description>
    <label>Shipping In 1Q After Close Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>